# investment-strategies

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml
.github/workflows/: test.yml
backend/: Dockerfile
backend/app/: api.py  main.py
backend/app/strategies/: daily.py  rolling.py
backend/tests/: test_simulation.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: PortfolioChart.tsx
src/investment_strategies/: helpers.py  main_daily.py  main_rolling_weekly.py
tests/: test_helpers.py
