[tool.poetry]
name = "investment-strategies"
version = "0.1.0"
description = "A full-stack investment strategy simulator using FastAPI and React"
authors = ["James Cranston <jcranston92@gmail.com>"]
readme = "README.md"
packages = []
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
pandas = "^2.2.0"
numpy = "^2.2.0"
lxml = "^5.3.0"
matplotlib = "^3.10.0"
pydantic = "^2.11.0"
yfinance = "^0.2.0"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
black = "^25.1.0"
ruff = "^0.11.5"
pre-commit = "^4.2.0"

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
